--- a/data/config.toml
+++ b/data/config.toml
@@ -1,13 +1,13 @@
 [app]
-app_url = "http://127.0.0.1:8000"
-app_key = "grok2api"
-api_key = ""
+app_url = "https://tczymgrok.zeabur.app"
+app_key = "19811213zym"
+api_key = "sk-tczym123"
 image_format = "url"
 video_format = "html"
 
 [network]
 timeout = 120
-base_proxy_url = ""
+base_proxy_url = "https://tczymgrok.zeabur.app"
 asset_proxy_url = ""
 
 [security]
